Fixed Scrollbars

--- a/globals/css/default.css
+++ b/globals/css/default.css
@@ -1,12 +1,7 @@
-* {
-	overflow: scroll;
-	text-overflow: scroll;
-}
-
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-	background-color: #1b1b1b;
+    background-color: #1b1b1b;
 }
 
 ul {
@@ -15,37 +10,37 @@ ul {
 }
 
 button {
-	padding: 5px 10px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	transition-duration: 0.4s;
-	cursor: pointer;
-	background-color: #d1702f;
-	color: white;
-	border: 2px solid #d1702f;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: #d1702f;
+    color: white;
+    border: 2px solid #d1702f;
 }
 
 button:hover {
-	background-color: #ddd;
-	color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 .container {
-	color: white;
-	background-color: #1f1f1f;
-	padding-bottom: 30px;
-	padding-top: 1px;
-	border-bottom-left-radius: 50px;
-	border-bottom-right-radius: 50px;
-	text-align: center;
+    color: white;
+    background-color: #1f1f1f;
+    padding-bottom: 30px;
+    padding-top: 1px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    text-align: center;
 }
 
 .subcontainer {
-	color: white;
-	text-align: center;
+    color: white;
+    text-align: center;
 }
 
 textarea {
@@ -56,22 +51,36 @@ textarea {
 ul li {
     background: #d1702f;
     padding-left: 5px;
-	width: 20em;
-	margin: auto;
-	margin-top: 7.5px;
+    width: 20em;
+    margin: auto;
+    margin-top: 7.5px;
 }
 
 ul li:hover {
-	background-color: white;
-	color: black;
+    background-color: white;
+    color: black;
 }
 
 a {
-	text-decoration: none;
-	color: white;
+    text-decoration: none;
+    color: white;
 }
 
 a:hover {
-	text-decoration: none;
-	color: black;
+    text-decoration: none;
+    color: black;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+	height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #da844b;
+    outline: 1px solid slategrey;
 }
